--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
       <li><span class="xr-star" style="color:#2563eb">★</span> Not on Google Maps</li>
       <li><span class="xr-star" style="color:#9333ea">★</span> Not on either</li>
     </ul>
-    <button id="xr-filter-btn" class="xr-filter-btn">Show only flagged</button>
+    <button id="xr-filter-btn" class="xr-filter-btn">Show only unadvertised</button>
     <div id="xr-venue-list" class="xr-venue-list"></div>
 
     <a href="https://github.com/jareklupinski/nyc-eats" target="_blank" rel="noopener" class="github-link">
